@@ -9627,6 +9627,10 @@ that all inputs are \kbd{ZX}s and that $T$ is monic.
 \fun{GEN}{ZXQ_powu}{GEN x,ulong n,GEN T} returns $x^n$ mod $T$, assuming
 that all inputs are \kbd{ZX}s and that $T$ is monic.
 
+\fun{GEN}{ZXQ_powers}{GEN x, long n, GEN T} returns $[\kbd{x}^0,
+\dots, \kbd{x}^\kbd{n}]$ mod $T$ as a \typ{VEC}, assuming that all inputs are
+\kbd{ZX}s and that $T$ is monic.
+
 \fun{GEN}{ZXQ_charpoly}{GEN A, GEN T, long v}: let \kbd{T} and \kbd{A} be
 \kbd{ZX}s, returns the characteristic polynomial of \kbd{Mod(A, T)}.
 More generally, \kbd{A} is allowed to be a \kbd{QX}, hence possibly has
